// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getView Happy path with default query params and data from endpoints 1`] = `
"<!DOCTYPE html>
<html lang="en" class="govuk-template">
  <head>
    <meta charset="utf-8">
    <title>Prepare someone for release - Finance and ID
</title>
    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
    <meta name="theme-color" content="#0b0c0c">

    
      <link rel="icon" sizes="48x48" href="/assets/images/favicon.ico">
      <link rel="icon" sizes="any" href="/assets/images/favicon.svg" type="image/svg+xml">
      <link rel="mask-icon" href="/assets/images/govuk-icon-mask.svg" color="#0b0c0c">
      <link rel="apple-touch-icon" href="/assets/images/govuk-icon-180.png">
      <link rel="manifest" href="/assets/manifest.json">
    

    
  <link href="/assets/stylesheets/application.css?" rel="stylesheet" />
  <script src="/assets/js/jquery.min.js"></script>
  
  <!--<![endif]-->
  
  
  <script src="/assets/analytics.js" nonce=""></script>
  <meta name="csrf-token" content="">

    
  </head>
  <body class="govuk-template__body">
    <script>document.body.className += ' js-enabled' + ('noModule' in HTMLScriptElement.prototype ? ' govuk-frontend-supported' : '');</script>
    

    
      <a href="#main-content" class="govuk-skip-link" data-module="govuk-skip-link">Skip to main content</a>

    

    
  
    
    
<header class="fallback-dps-header" role="banner">
  <div class="fallback-dps-header__container">
    <div class="fallback-dps-header__title">
      <a class="fallback-dps-header__link fallback-dps-header__link--no-underline fallback-dps-header__title__service-name" href="#">
        <svg role="presentation" focusable="false" class="fallback-dps-header__logo" xmlns="http://www.w3.org/2000/svg" width="41" height="30" viewBox="0 0 41 30">
          <path fill-rule="evenodd" clip-rule="evenodd" d="M7.54677 9.20065C8.64351 9.65301 9.88802 9.13584 10.3347 8.05183C10.7839 6.97073 10.27 5.71374 9.17342 5.26352C8.09836 4.82212 6.84843 5.34938 6.40124 6.4349C5.95404 7.515 6.47121 8.76014 7.54677 9.20065Z"/>
          <path fill-rule="evenodd" clip-rule="evenodd" d="M2.71865 12.0298C3.81564 12.4821 5.0599 11.965 5.50659 10.881C5.9558 9.79984 5.44191 8.54286 4.34529 8.09264C3.27023 7.65124 2.02031 8.17837 1.57311 9.26402C1.12592 10.3441 1.64308 11.5891 2.71865 12.0298Z"/>
          <path fill-rule="evenodd" clip-rule="evenodd" d="M1.3065 17.397C2.4035 17.8494 3.648 17.3322 4.09469 16.2481C4.54391 15.1669 4.02977 13.91 2.9334 13.4599C1.85834 13.0183 0.608415 13.5457 0.160968 14.6311C-0.286227 15.7112 0.231192 16.9565 1.3065 17.397Z"/>
          <path fill-rule="evenodd" clip-rule="evenodd" d="M12.9335 10.9018C14.0302 11.3542 15.2747 10.837 15.7214 9.75301C16.1706 8.6719 15.6568 7.41491 14.5601 6.96469C13.4851 6.52329 12.2351 7.05055 11.788 8.13607C11.3408 9.21617 11.8579 10.4613 12.9335 10.9018Z"/>
          <path fill-rule="evenodd" clip-rule="evenodd" d="M32.4543 9.20065C31.3573 9.65301 30.1131 9.13584 29.6661 8.05183C29.2172 6.97073 29.7308 5.71374 30.8274 5.26352C31.9027 4.82212 33.1527 5.34938 33.5999 6.4349C34.0471 7.515 33.5299 8.76014 32.4543 9.20065Z"/>
          <path fill-rule="evenodd" clip-rule="evenodd" d="M37.2805 12.0298C36.1833 12.4821 34.939 11.965 34.4923 10.881C34.0433 9.79984 34.557 8.54286 35.6536 8.09264C36.7289 7.65124 37.9788 8.17837 38.426 9.26402C38.8732 10.3441 38.3558 11.5891 37.2805 12.0298Z"/>
          <path fill-rule="evenodd" clip-rule="evenodd" d="M38.6944 17.397C37.5977 17.8494 36.3532 17.3322 35.9065 16.2481C35.4573 15.1669 35.9712 13.91 37.0678 13.4599C38.1428 13.0183 39.3928 13.5457 39.84 14.6311C40.2874 15.7112 39.77 16.9565 38.6944 17.397Z"/>
          <path fill-rule="evenodd" clip-rule="evenodd" d="M27.0657 10.9018C25.9687 11.3542 24.7244 10.837 24.2775 9.75301C23.8285 8.6719 24.3421 7.41491 25.4388 6.96469C26.5141 6.52329 27.764 7.05055 28.2112 8.13607C28.6584 9.21617 28.1412 10.4613 27.0657 10.9018Z"/>
          <path fill-rule="evenodd" clip-rule="evenodd" d="M21.1246 5.39912L21.1311 5.39294L23.8259 6.80828V2.83635L21.1342 3.68851L21.1266 3.68044C21.0512 3.58147 20.9639 3.49284 20.8653 3.41656L20.858 3.40899L21.9407 0L19.9961 0.000252154L18.0507 0L19.1337 3.40899L19.1263 3.41656C19.0281 3.49284 18.9402 3.58147 18.8653 3.68044L18.8573 3.68851L16.166 2.83635V6.80828L18.8609 5.39294L18.8673 5.39912C18.9471 5.50351 19.0407 5.5963 19.1458 5.67498L17.5981 10.344C17.5962 10.3498 17.5942 10.3556 17.5925 10.3611L17.5908 10.366L17.5913 10.3666C17.5193 10.5997 17.4807 10.847 17.4807 11.1036C17.4807 12.3669 18.4127 13.4095 19.6264 13.5887C19.6445 13.5915 19.6621 13.5946 19.6804 13.5968C19.7838 13.61 19.8884 13.6188 19.9956 13.6188H19.9961H19.9964C20.1031 13.6188 20.2079 13.61 20.3116 13.5968C20.3295 13.5946 20.3472 13.5915 20.3655 13.5887C21.5788 13.4095 22.5112 12.3669 22.5112 11.1036C22.5112 10.847 22.4721 10.5997 22.4006 10.3666L22.4009 10.366L22.3994 10.3611C22.3975 10.3556 22.3955 10.3498 22.3935 10.344L20.8461 5.67498C20.951 5.5963 21.0448 5.50351 21.1246 5.39912Z"/>
          <path fill-rule="evenodd" clip-rule="evenodd" d="M19.9961 28.2469C25.1126 28.2469 29.9557 28.5936 34.2707 29.2111C35.4958 24.0612 36.9865 21.1103 38.5258 19.0092L35.6272 17.978C35.9156 19.4496 35.9616 20.1346 35.6388 21.0806C35.1608 20.6133 34.7078 19.7539 34.3542 18.4405L32.95 23.1175C33.8045 22.529 34.4635 22.1489 35.2174 22.1306C33.8799 25.0107 32.2103 25.7519 31.1284 25.552C29.8069 25.3094 29.1998 24.1313 29.4046 23.1324C29.7085 21.7159 31.1616 21.3468 31.8404 22.994C33.1384 20.3461 30.9362 19.5212 29.5189 20.3045C31.6957 18.1333 31.9448 16.2036 30.1877 13.8682C27.7395 15.7394 27.7109 17.5926 28.8127 20.1999C27.383 18.5638 25.1586 19.4422 25.9621 22.0859C26.9932 20.4897 28.3578 21.4937 28.1436 23.0095C27.9627 24.3308 26.2183 25.3978 24.0464 25.2087C20.9338 24.9265 20.7484 22.7785 20.6709 21.0011C21.4362 20.8593 22.814 21.5684 23.9887 23.2183L24.4217 18.2575C23.1434 19.5894 21.9821 19.8421 20.6921 19.8829C21.1215 18.5433 23.0951 16.3481 23.0951 16.3481L20.2276 16.3478H20.2261H20.2248L16.9033 16.3481C16.9033 16.3481 18.877 18.5433 19.3061 19.8829C18.0163 19.8421 16.8551 19.5894 15.5765 18.2575L16.0097 23.2183C17.1847 21.5684 18.5623 20.8593 19.3276 21.0011C19.2503 22.7785 19.0648 24.9265 15.9521 25.2087C13.7802 25.3978 12.036 24.3308 11.8548 23.0095C11.6406 21.4937 13.0053 20.4897 14.0365 22.0859C14.8401 19.4422 12.6152 18.5638 11.186 20.1999C12.2877 17.5926 12.2587 15.7394 9.81076 13.8682C8.0535 16.2036 8.3025 18.1333 10.4793 20.3045C9.06211 19.5212 6.86005 20.3461 8.15814 22.994C8.83681 21.3468 10.2902 21.7159 10.5941 23.1324C10.7989 24.1313 10.1911 25.3094 8.87035 25.552C7.78836 25.7519 6.11859 25.0107 4.78117 22.1306C5.53523 22.1489 6.19361 22.529 7.04866 23.1175L5.64454 18.4405C5.29039 19.7539 4.8379 20.6133 4.35969 21.0806C4.03656 20.1346 4.08283 19.4496 4.37091 17.978L1.47266 19.0092C3.01218 21.11 4.50241 24.0607 5.72725 29.21C10.041 28.5931 14.8817 28.2469 19.9961 28.2469Z"/>
        </svg>
        Digital Prison Services
      </a>

      
    </div>

    <nav aria-label="Account navigation">
      <ul class="fallback-dps-header__navigation">
        
          <li class="fallback-dps-header__navigation__item">
            <span data-qa=header-user-name>F. Last</span>
          </li>
        

        <li class="fallback-dps-header__navigation__item">
          <a data-qa="signOut" class="fallback-dps-header__link fallback-dps-header__link--no-underline fallback-dps-header__sign-out" href="/sign-out">Sign out</a>
        </li>
      </ul>
    </nav>
  </div>
</header>

  

  <div class="govuk-width-container">
    
<div class="govuk-phase-banner">
  <p class="govuk-phase-banner__content">
    <strong class="govuk-tag govuk-phase-banner__content__tag">
      BETA
    </strong>
    <span class="govuk-phase-banner__text">
      This is a new service – your <a class="govuk-link" target="_blank" rel="noopener noreferrer"
                                                            href="https://eu.surveymonkey.com/r/prepare-someone-for-release-beta">feedback</a> will help us to improve it.
                                                            <a class="govuk-link" target="_blank" rel="noopener noreferrer"
                                                            href="/service-updates">View updates and changes.</a>
    </span>
  </p>
</div>

    
      
    
    
      
      
    

    
  
  

  
<nav class="govuk-breadcrumbs govuk-!-display-none-print govuk-breadcrumbs--collapse-on-mobile" aria-label="Breadcrumb">
  <ol class="govuk-breadcrumbs__list">

  
    <li class="govuk-breadcrumbs__list-item">
      <a class="govuk-breadcrumbs__link" href="#">Digital Prison Services</a>
    </li>
  

  
    <li class="govuk-breadcrumbs__list-item">
      <a class="govuk-breadcrumbs__link" href="/">Prepare someone for release</a>
    </li>
  

  </ol>
</nav>



    <br />
    
      <span class="govuk-caption-xl">Prepare someone for release</span>
      <h1 class="govuk-heading-xl" data-qa="page-heading">Resettlement record</h1>
    

    
  <div class="govuk-grid-row profile-header">
    <div class="govuk-grid-column-full">
      <div class="govuk-grid-row">
        <div class="govuk-grid-column-one-half">
          <div class="govuk-grid-row">
            <div class="govuk-grid-column-one-quarter">
              <a href="/prisoner-overview/?prisonerNumber=A1234DY">
                <img src="data:image/jpeg;base64, " alt="view prisoner profile"
                     class="govuk-!-width-full profile-header__person-photo">
              </a>
            </div>
            <div class="govuk-grid-column-three-quarters">
              <h1 class="govuk-heading-xl" data-qa="profile-heading-full-name">
                Smith, John
                <span class="govuk-caption-l">A1234DY</span>
                <p class="govuk-body-s govuk-!-padding-top-2">
                  <a href="#/prisoner/A1234DY">View full DPS
                    profile</a>
                </p>
              </h1>
            </div>
          </div>
        </div>
        <div class="govuk-grid-column-one-half">
          <div class="govuk-grid-row">
            <div class="govuk-grid-column-one-half">
              <p>
                <b>Prisoner number:</b><br>
                A1234DY</p>
              <p>
                <b>Location:</b>
                
              </p>
              <p>
                <b>Date of birth:</b>
                
                ()</p>
            </div>
            <div class="govuk-grid-column-one-half">
              <p>
                <b>Release date:</b>
                -
                <br />
                
                
                
                
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>

    


  <div class="govuk-grid-row ">
    <div class="govuk-grid-column-full">
      <nav class="moj-sub-navigation" aria-label="Sub navigation">
        <ul class="moj-sub-navigation__list">
          
            <li class="moj-sub-navigation__item">
              <a class="moj-sub-navigation__link"
                 data-qa="sub-nav-prisoner-overview"
                 href="/prisoner-overview/?prisonerNumber=A1234DY" >
                Resettlement overview
              </a>
            </li>
          
            <li class="moj-sub-navigation__item">
              <a class="moj-sub-navigation__link"
                 data-qa="sub-nav-accommodation"
                 href="/accommodation/?prisonerNumber=A1234DY" >
                Accommodation
              </a>
            </li>
          
            <li class="moj-sub-navigation__item">
              <a class="moj-sub-navigation__link"
                 data-qa="sub-nav-attitudes-thinking-and-behaviour"
                 href="/attitudes-thinking-and-behaviour/?prisonerNumber=A1234DY" >
                Attitudes, thinking and behaviour
              </a>
            </li>
          
            <li class="moj-sub-navigation__item">
              <a class="moj-sub-navigation__link"
                 data-qa="sub-nav-children-families-and-communities"
                 href="/children-families-and-communities/?prisonerNumber=A1234DY" >
                Children, families and communities
              </a>
            </li>
          
            <li class="moj-sub-navigation__item">
              <a class="moj-sub-navigation__link"
                 data-qa="sub-nav-drugs-and-alcohol"
                 href="/drugs-and-alcohol/?prisonerNumber=A1234DY" >
                Drugs and alcohol
              </a>
            </li>
          
            <li class="moj-sub-navigation__item">
              <a class="moj-sub-navigation__link"
                 data-qa="sub-nav-education-skills-and-work"
                 href="/education-skills-and-work/?prisonerNumber=A1234DY" >
                Education, skills and work
              </a>
            </li>
          
            <li class="moj-sub-navigation__item">
              <a class="moj-sub-navigation__link"
                 data-qa="sub-nav-finance-and-id"
                 href="/finance-and-id/?prisonerNumber=A1234DY" aria-current=page>
                Finance and ID
              </a>
            </li>
          
            <li class="moj-sub-navigation__item">
              <a class="moj-sub-navigation__link"
                 data-qa="sub-nav-health-status"
                 href="/health-status/?prisonerNumber=A1234DY" >
                Health
              </a>
            </li>
          
        </ul>
      </nav>
    </div>
  </div>


  </div>


    
      <div class="govuk-width-container">
        
        <main class="govuk-main-wrapper app-container govuk-body" id="main-content">
          
  <div class="govuk-grid-row govuk-!-padding-top-4 govuk-!-padding-bottom-4">
    
  <div class="govuk-grid-column-two-thirds">
    <h2 class="govuk-heading-l" data-qa="page-title-h2">
      Finance and ID
    </h2>
    
  </div>

    <div class="govuk-grid-column-one-third">
      
  <section id="pathway-status" class="app-summary-card govuk-!-margin-bottom-8">
    <header class="app-summary-card__header">
      <h3 class="app-summary-card__title">
        Resettlement status: 
        <strong class="govuk-tag govuk-tag--blue"> In progress </strong>
      </h3>
    </header>
    <div class="app-summary-card__header">
      <div class="govuk-form-group govuk-!-margin-0">
        <input type="hidden" id="updated" name="updated" value="today" />
        <input type="hidden" id="pathway" name="pathway" value="attitudes" />
        <a
          class="govuk-button"
          href="/status-update?selectedPathway=finance-and-id&prisonerNumber=A1234DY"
          data-qa="update-pathway-status-button"
        >
          Update status
        </a>
      </div>
    </div>
  </section>

    </div>
  </div>
  <div class="govuk-grid-row govuk-!-padding-top-4">
    <div class="govuk-grid-column-one-quarter sticky-anchor-links">
      

      
        
      
      
  <ul class="app-subnav__section">
    <li class="app-subnav__section-item app-subnav__section-item--current">
      <ul class="app-subnav__section app-subnav__section--nested">
        
          <li class="app-subnav__section-item">
            <a href="#case-notes">Case notes and status history</a>
          </li>
        
          <li class="app-subnav__section-item">
            <a href="#finance">Finance</a>
          </li>
        
          <li class="app-subnav__section-item">
            <a href="#id">ID</a>
          </li>
        
          <li class="app-subnav__section-item">
            <a href="#assessment-information">Report information</a>
          </li>
        
          <li class="app-subnav__section-item">
            <a href="#referral-contract-type">Referral - Contract Type</a>
          </li>
        
      </ul>
    </li>
  </ul>

    </div>
    <div class="govuk-grid-column-three-quarters">
      

<section id="case-notes" class="app-summary-card govuk-!-margin-bottom-8">
  
  <header class="app-summary-card__header">
    <h3 class="app-summary-card__title">Finance and ID case notes and status history</h3>
  </header>
  <div class="app-summary-card__body govuk-!-padding-top-4">
    <div class="govuk-grid-row">
      
      <form action="/finance-and-id?prisonerNumber=A1234DY#case-notes" method="GET" novalidate>
        <div class="govuk-grid-column-full">
          <label class="govuk-label" for="pathway-select">Created by</label>
          <select name="createdByUserId" class="govuk-select" id="pathway-select">
            <option value="0">Select an option</option>
            
              
              <option  value="A_USER">A User</option>
            
          </select>
          
          <input type="hidden" name="prisonerNumber" value="A1234DY">
        </div>
        <div class="govuk-grid-column-full">
          <button class="govuk-button govuk-!-margin-bottom-0 govuk-!-margin-top-4" type="submit">Apply filters</button>
        </div>
      </form>
    </div>
    
      <div class="govuk-grid-row govuk-!-padding-top-8">
        <div class="govuk-grid-column-full" id="case-notes-container">
          <hr>
          
            
            <div class="case-note">
              <h3>Finance and ID</h3>
              <strong></strong>
              <p class="show-line-breaks">
                This is a case note
              </p>
              <span class="govuk-caption-m">Happened: 7 September 2024</span>
              <span class="govuk-caption-m">Created: 7 September 2024 by A User</span>
              <br>
            </div>
            <hr>
            
            
            <div class="case-note">
              <h3>Finance and ID</h3>
              <strong></strong>
              <p class="show-line-breaks">
                This is another case note
              </p>
              <span class="govuk-caption-m">Happened: 7 September 2024</span>
              <span class="govuk-caption-m">Created: 7 September 2024 by A User</span>
              <br>
            </div>
            <hr>
            
          
          
          
          
          
          
            
  
  

  <nav class="moj-pagination" aria-label="Pagination navigation">
    <ul class="moj-pagination__list">
      
      
          <li class="moj-pagination__item moj-pagination__item--active" aria-current="page" aria-label="Page 1 of 1">1</li>
        
      
    </ul>
    
    
      
    
    <p class="moj-pagination__results">Showing <b>1</b> to <b>2</b> of <b>2</b> results</p>
  </nav>

          
        </div>
      </div>
      
  </div>
</section>
      <section id="finance" class="app-summary-card govuk-!-margin-bottom-8">
        <header class="app-summary-card__header">
          <h3 class="app-summary-card__title">
            Finance
          </h3>
          
        </header>
        <div class="app-summary-card__body">
          <div class="govuk-grid-row">
            <div class="govuk-grid-column-full">
              
                <h3 class="govuk-heading-s">Bank account</h3>
                <table class="govuk-table">
                  <tbody class="govuk-table__body">
                  <tr class="govuk-table__row">
                    <th scope="row" class="govuk-table__header">Bank</th>
                    <td class="govuk-table__cell">Natwest</td>
                  </tr>
                  <tr class="govuk-table__row">
                    <th scope="row" class="govuk-table__header">Application submitted</th>
                    <td class="govuk-table__cell">8 September 2024</td>
                  </tr>
                  <tr class="govuk-table__row">
                    <th scope="row" class="govuk-table__header">Status</th>
                    <td class="govuk-table__cell">Accepted</td>
                  </tr>
                  
                    <tr class="govuk-table__row">
                      <th scope="row" class="govuk-table__header">Date Accepted</th>
                      <td class="govuk-table__cell">10 September 2024</td>
                    </tr>
                  
                  
                  </tbody>
                </table>
                <br>
                
                
                <button class="ghost-button delete-finance-button">Delete application</button>
                <div class="confirm-delete-finance-form" hidden>
                  <div class="govuk-button-group">
                    <form action="/finance-and-id/bank-account-delete" method="post" novalidate>
                      <button class="govuk-button govuk-button--warning" type="submit" data-prevent-double-click="true">Confirm delete application
                      </button>
                      <input type="hidden" name="prisonerNumber" value="A1234DY">
                      <input type="hidden" name="financeId" value="12">
                      <input type="hidden" name="_csrf" value=""/>
                    </form>
                    <button class="ghost-button cancel-delete-finance-button" hidden>Cancel delete application</button>
                  </div>
                </div>
                
                
                  
                
                  
                
                
              
            </div>
          </div>
        </div>
      </section>
      <section id="id" class="app-summary-card govuk-!-margin-bottom-8">
        <header class="app-summary-card__header">
          <h3 class="app-summary-card__title">
            ID
          </h3>
          
          
            
          
            
          
          <span class="right">
              <a class="govuk-button"
                 href="/finance-and-id/add-an-id/?prisonerNumber=A1234DY&existingIdTypes=Birth certificate,Driving licence">
                Add an ID application
              </a>
            </span>
        </header>
        <div class="app-summary-card__body">
          <div class="govuk-grid-row">
            <div class="govuk-grid-column-full">
              
                
                  <div class="govuk-!-margin-bottom-8">
                    <h3 class="govuk-heading-s">ID 1</h3>
                    <table class="govuk-table">
                      <tbody class="govuk-table__body">
                      <tr class="govuk-table__row">
                        <th scope="row" class="govuk-table__header">Type</th>
                        <td class="govuk-table__cell">Birth certificate</td>
                      </tr>
                      <tr class="govuk-table__row">
                        <th scope="row" class="govuk-table__header">Application submitted</th>
                        <td class="govuk-table__cell">12 September 2024</td>
                      </tr>
                      
                        <tr class="govuk-table__row">
                          <th scope="row" class="govuk-table__header">Has the GRO number?</th>
                          <td class="govuk-table__cell">
                            No
                          </td>
                        </tr>
                        
                          <tr class="govuk-table__row">
                            <th scope="row" class="govuk-table__header">Was a UK national born overseas?</th>
                            <td class="govuk-table__cell">
                              No
                            </td>
                          </tr>
                        
                        <tr class="govuk-table__row">
                          <th scope="row" class="govuk-table__header">Priority application</th>
                          <td class="govuk-table__cell">
                            Yes
                          </td>
                        </tr>
                        
                      
                        <tr class="govuk-table__row">
                          <th scope="row" class="govuk-table__header">Cost of application</th>
                          <td class="govuk-table__cell">£12</td>
                        </tr>
                      
                      <tr class="govuk-table__row">
                        <th scope="row" class="govuk-table__header">Application status</th>
                        <td class="govuk-table__cell">Complete</td>
                      </tr>
                      
                      
                      </tbody>
                    </table>
                    <br>
                    
                    <button class="ghost-button delete-id-button">Delete application</button>
                    <div class="confirm-delete-id-form" hidden>
                      <div class="govuk-button-group">
                        <form action="/finance-and-id/id-delete" method="POST" novalidate>
                          <button class="govuk-button govuk-button--warning" type="submit" data-prevent-double-click="true">Confirm delete application
                          </button>
                          <input type="hidden" name="prisonerNumber" value="A1234DY">
                          <input type="hidden" name="idId" value="13">
                          <input type="hidden" name="_csrf" value=""/>
                        </form>
                        <button class="ghost-button cancel-delete-id-button" hidden>Cancel delete application</button>
                      </div>
                    </div>
                  </div>
                
                  <div class="">
                    <h3 class="govuk-heading-s">ID 2</h3>
                    <table class="govuk-table">
                      <tbody class="govuk-table__body">
                      <tr class="govuk-table__row">
                        <th scope="row" class="govuk-table__header">Type</th>
                        <td class="govuk-table__cell">Driving licence</td>
                      </tr>
                      <tr class="govuk-table__row">
                        <th scope="row" class="govuk-table__header">Application submitted</th>
                        <td class="govuk-table__cell">12 September 2024</td>
                      </tr>
                      
                        <tr class="govuk-table__row">
                          <th scope="row" class="govuk-table__header">Driving licence type</th>
                          <td class="govuk-table__cell">Full</td>
                        </tr>
                        <tr class="govuk-table__row">
                          <th scope="row" class="govuk-table__header">Driving licence application location</th>
                          <td class="govuk-table__cell">2024-09-12T14:45:02</td>
                        </tr>
                      
                      
                        <tr class="govuk-table__row">
                          <th scope="row" class="govuk-table__header">Cost of application</th>
                          <td class="govuk-table__cell">£45</td>
                        </tr>
                      
                      <tr class="govuk-table__row">
                        <th scope="row" class="govuk-table__header">Application status</th>
                        <td class="govuk-table__cell">Rejected</td>
                      </tr>
                      
                      
                      </tbody>
                    </table>
                    <br>
                    
                    <button class="ghost-button delete-id-button">Delete application</button>
                    <div class="confirm-delete-id-form" hidden>
                      <div class="govuk-button-group">
                        <form action="/finance-and-id/id-delete" method="POST" novalidate>
                          <button class="govuk-button govuk-button--warning" type="submit" data-prevent-double-click="true">Confirm delete application
                          </button>
                          <input type="hidden" name="prisonerNumber" value="A1234DY">
                          <input type="hidden" name="idId" value="17">
                          <input type="hidden" name="_csrf" value=""/>
                        </form>
                        <button class="ghost-button cancel-delete-id-button" hidden>Cancel delete application</button>
                      </div>
                    </div>
                  </div>
                
              
            </div>
          </div>
        </div>
      </section>
      
  <section id="assessment-information" class="app-summary-card govuk-!-margin-bottom-8">
    <header class="app-summary-card__header">
      <h3 class="app-summary-card__title">Report information</h3>
      <span class="right"></span>
    </header>
    <div class="app-summary-card__body">
    
      
        <table class="govuk-table">
          <tbody class="govuk-table__body">
            
              <tr class="govuk-table__row">
                <th class="govuk-table__header" scope="row">This is a question</th>
                <td class="govuk-table__cell show-line-breaks">Another answer</td>
                <td class="govuk-table__cell">
                  <a href="/ImmediateNeedsReport/pathway/FINANCE_AND_ID/page/PAGE_1/start-edit/?prisonerNumber=A1234DY&submitted=true&type=BCST2">Change</a>
                </td>
              </tr>
            
              <tr class="govuk-table__row">
                <th class="govuk-table__header" scope="row">This is another question</th>
                <td class="govuk-table__cell show-line-breaks">Answer1
Answer2
Answer3</td>
                <td class="govuk-table__cell">
                  <a href="/ImmediateNeedsReport/pathway/FINANCE_AND_ID/page/PAGE_2/start-edit/?prisonerNumber=A1234DY&submitted=true&type=BCST2">Change</a>
                </td>
              </tr>
            
          </tbody>
        </table>
        <p class="app-summary-card__hint">Last updated: 2 September 2024 by A User</p>
        
          <details class="govuk-details">
            <summary class="govuk-details__summary">
              <span class="govuk-details__summary-text">
                View original version
              </span>
            </summary>
            <div class="govuk-details__text">
              <h3 class="govuk-!-margin-bottom-3">Original report information</h3>
              <table class="govuk-table">
                <tbody class="govuk-table__body">
                
                  <tr class="govuk-table__row">
                    <th class="govuk-table__header" scope="row">This is a question</th>
                    <td class="govuk-table__cell show-line-breaks">An answer</td>
                  </tr>
                
                  <tr class="govuk-table__row">
                    <th class="govuk-table__header" scope="row">This is another question</th>
                    <td class="govuk-table__cell show-line-breaks">Answer1
Answer2
Answer3</td>
                  </tr>
                
                </tbody>
              </table>
              <p class="app-summary-card__hint">Submitted: 7 September 2024 by A User</p>
            </div>
          </details>
        
      
    
  </div>
  </section>

      
  
    <section id="referral-contract-type" class="app-summary-card govuk-!-margin-bottom-8">
    <header class="app-summary-card__header">
      <h3 class="app-summary-card__title">
          Referral - Contract Type
        
          <strong class="govuk-tag govuk-tag--green govuk-!-margin-left-2">
            Referral sent
          </strong>
        
      </h3>
      <span class="right"></span>
    </header>
    <div class="app-summary-card__body">
      <table class="govuk-table">


  <tbody class="govuk-table__body">

  
    <tr class="govuk-table__row">
    
      
      
      <th scope="row" class="govuk-table__header">Contract Type</th>
      
    
      
      
      <td class="govuk-table__cell">Contract Type</td>
      
    
    </tr>
  

  
    <tr class="govuk-table__row">
    
      
      
      <th scope="row" class="govuk-table__header">Intervention Title</th>
      
    
      
      
      <td class="govuk-table__cell">Intervention Title</td>
      
    
    </tr>
  

  
    <tr class="govuk-table__row">
    
      
      
      <th scope="row" class="govuk-table__header">Service Categories</th>
      
    
      
      
      <td class="govuk-table__cell">Cat 1, Cat 2, Cat 3</td>
      
    
    </tr>
  

  
    <tr class="govuk-table__row">
    
      
      
      <th scope="row" class="govuk-table__header">Service Provider</th>
      
    
      
      
      <td class="govuk-table__cell">The service provider</td>
      
    
    </tr>
  

  
    <tr class="govuk-table__row">
    
      
      
      <th scope="row" class="govuk-table__header">Service Provider Location</th>
      
    
      
      
      <td class="govuk-table__cell">Leeds</td>
      
    
    </tr>
  

  
    <tr class="govuk-table__row">
    
      
      
      <th scope="row" class="govuk-table__header">Service Provider User</th>
      
    
      
      
      <td class="govuk-table__cell">A User</td>
      
    
    </tr>
  

  
    <tr class="govuk-table__row">
    
      
      
      <th scope="row" class="govuk-table__header">Referring Officer</th>
      
    
      
      
      <td class="govuk-table__cell">A Officer</td>
      
    
    </tr>
  

  
    <tr class="govuk-table__row">
    
      
      
      <th scope="row" class="govuk-table__header">Responsible Officer</th>
      
    
      
      
      <td class="govuk-table__cell">Another Officer</td>
      
    
    </tr>
  

  
    <tr class="govuk-table__row">
    
      
      
      <th scope="row" class="govuk-table__header">Referral Created</th>
      
    
      
      
      <td class="govuk-table__cell">10 Sept 2024</td>
      
    
    </tr>
  

  
    <tr class="govuk-table__row">
    
      
      
      <th scope="row" class="govuk-table__header">Referral Sent</th>
      
    
      
      
      <td class="govuk-table__cell">31 Aug 2024</td>
      
    
    </tr>
  

  </tbody>
</table>

      </div>
    </section>
  

    </div>
  </div>

        </main>
      </div>
    

    
  
    
    <footer class="govuk-footer govuk-!-display-none-print"></footer>

  


    
  
  
  <script type="module" src="/assets/govukFrontendInit.js"></script>
  <script src="/assets/moj/all.js"></script>
  <script src="/assets/mojFrontendInit.js"></script>

  <script src="/assets/js/finance-id.js"></script>

  </body>
</html>
"
`;

exports[`getView Happy path with default query params and no data from endpoints 1`] = `
"<!DOCTYPE html>
<html lang="en" class="govuk-template">
  <head>
    <meta charset="utf-8">
    <title>Prepare someone for release - Finance and ID
</title>
    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
    <meta name="theme-color" content="#0b0c0c">

    
      <link rel="icon" sizes="48x48" href="/assets/images/favicon.ico">
      <link rel="icon" sizes="any" href="/assets/images/favicon.svg" type="image/svg+xml">
      <link rel="mask-icon" href="/assets/images/govuk-icon-mask.svg" color="#0b0c0c">
      <link rel="apple-touch-icon" href="/assets/images/govuk-icon-180.png">
      <link rel="manifest" href="/assets/manifest.json">
    

    
  <link href="/assets/stylesheets/application.css?" rel="stylesheet" />
  <script src="/assets/js/jquery.min.js"></script>
  
  <!--<![endif]-->
  
  
  <script src="/assets/analytics.js" nonce=""></script>
  <meta name="csrf-token" content="">

    
  </head>
  <body class="govuk-template__body">
    <script>document.body.className += ' js-enabled' + ('noModule' in HTMLScriptElement.prototype ? ' govuk-frontend-supported' : '');</script>
    

    
      <a href="#main-content" class="govuk-skip-link" data-module="govuk-skip-link">Skip to main content</a>

    

    
  
    
    
<header class="fallback-dps-header" role="banner">
  <div class="fallback-dps-header__container">
    <div class="fallback-dps-header__title">
      <a class="fallback-dps-header__link fallback-dps-header__link--no-underline fallback-dps-header__title__service-name" href="#">
        <svg role="presentation" focusable="false" class="fallback-dps-header__logo" xmlns="http://www.w3.org/2000/svg" width="41" height="30" viewBox="0 0 41 30">
          <path fill-rule="evenodd" clip-rule="evenodd" d="M7.54677 9.20065C8.64351 9.65301 9.88802 9.13584 10.3347 8.05183C10.7839 6.97073 10.27 5.71374 9.17342 5.26352C8.09836 4.82212 6.84843 5.34938 6.40124 6.4349C5.95404 7.515 6.47121 8.76014 7.54677 9.20065Z"/>
          <path fill-rule="evenodd" clip-rule="evenodd" d="M2.71865 12.0298C3.81564 12.4821 5.0599 11.965 5.50659 10.881C5.9558 9.79984 5.44191 8.54286 4.34529 8.09264C3.27023 7.65124 2.02031 8.17837 1.57311 9.26402C1.12592 10.3441 1.64308 11.5891 2.71865 12.0298Z"/>
          <path fill-rule="evenodd" clip-rule="evenodd" d="M1.3065 17.397C2.4035 17.8494 3.648 17.3322 4.09469 16.2481C4.54391 15.1669 4.02977 13.91 2.9334 13.4599C1.85834 13.0183 0.608415 13.5457 0.160968 14.6311C-0.286227 15.7112 0.231192 16.9565 1.3065 17.397Z"/>
          <path fill-rule="evenodd" clip-rule="evenodd" d="M12.9335 10.9018C14.0302 11.3542 15.2747 10.837 15.7214 9.75301C16.1706 8.6719 15.6568 7.41491 14.5601 6.96469C13.4851 6.52329 12.2351 7.05055 11.788 8.13607C11.3408 9.21617 11.8579 10.4613 12.9335 10.9018Z"/>
          <path fill-rule="evenodd" clip-rule="evenodd" d="M32.4543 9.20065C31.3573 9.65301 30.1131 9.13584 29.6661 8.05183C29.2172 6.97073 29.7308 5.71374 30.8274 5.26352C31.9027 4.82212 33.1527 5.34938 33.5999 6.4349C34.0471 7.515 33.5299 8.76014 32.4543 9.20065Z"/>
          <path fill-rule="evenodd" clip-rule="evenodd" d="M37.2805 12.0298C36.1833 12.4821 34.939 11.965 34.4923 10.881C34.0433 9.79984 34.557 8.54286 35.6536 8.09264C36.7289 7.65124 37.9788 8.17837 38.426 9.26402C38.8732 10.3441 38.3558 11.5891 37.2805 12.0298Z"/>
          <path fill-rule="evenodd" clip-rule="evenodd" d="M38.6944 17.397C37.5977 17.8494 36.3532 17.3322 35.9065 16.2481C35.4573 15.1669 35.9712 13.91 37.0678 13.4599C38.1428 13.0183 39.3928 13.5457 39.84 14.6311C40.2874 15.7112 39.77 16.9565 38.6944 17.397Z"/>
          <path fill-rule="evenodd" clip-rule="evenodd" d="M27.0657 10.9018C25.9687 11.3542 24.7244 10.837 24.2775 9.75301C23.8285 8.6719 24.3421 7.41491 25.4388 6.96469C26.5141 6.52329 27.764 7.05055 28.2112 8.13607C28.6584 9.21617 28.1412 10.4613 27.0657 10.9018Z"/>
          <path fill-rule="evenodd" clip-rule="evenodd" d="M21.1246 5.39912L21.1311 5.39294L23.8259 6.80828V2.83635L21.1342 3.68851L21.1266 3.68044C21.0512 3.58147 20.9639 3.49284 20.8653 3.41656L20.858 3.40899L21.9407 0L19.9961 0.000252154L18.0507 0L19.1337 3.40899L19.1263 3.41656C19.0281 3.49284 18.9402 3.58147 18.8653 3.68044L18.8573 3.68851L16.166 2.83635V6.80828L18.8609 5.39294L18.8673 5.39912C18.9471 5.50351 19.0407 5.5963 19.1458 5.67498L17.5981 10.344C17.5962 10.3498 17.5942 10.3556 17.5925 10.3611L17.5908 10.366L17.5913 10.3666C17.5193 10.5997 17.4807 10.847 17.4807 11.1036C17.4807 12.3669 18.4127 13.4095 19.6264 13.5887C19.6445 13.5915 19.6621 13.5946 19.6804 13.5968C19.7838 13.61 19.8884 13.6188 19.9956 13.6188H19.9961H19.9964C20.1031 13.6188 20.2079 13.61 20.3116 13.5968C20.3295 13.5946 20.3472 13.5915 20.3655 13.5887C21.5788 13.4095 22.5112 12.3669 22.5112 11.1036C22.5112 10.847 22.4721 10.5997 22.4006 10.3666L22.4009 10.366L22.3994 10.3611C22.3975 10.3556 22.3955 10.3498 22.3935 10.344L20.8461 5.67498C20.951 5.5963 21.0448 5.50351 21.1246 5.39912Z"/>
          <path fill-rule="evenodd" clip-rule="evenodd" d="M19.9961 28.2469C25.1126 28.2469 29.9557 28.5936 34.2707 29.2111C35.4958 24.0612 36.9865 21.1103 38.5258 19.0092L35.6272 17.978C35.9156 19.4496 35.9616 20.1346 35.6388 21.0806C35.1608 20.6133 34.7078 19.7539 34.3542 18.4405L32.95 23.1175C33.8045 22.529 34.4635 22.1489 35.2174 22.1306C33.8799 25.0107 32.2103 25.7519 31.1284 25.552C29.8069 25.3094 29.1998 24.1313 29.4046 23.1324C29.7085 21.7159 31.1616 21.3468 31.8404 22.994C33.1384 20.3461 30.9362 19.5212 29.5189 20.3045C31.6957 18.1333 31.9448 16.2036 30.1877 13.8682C27.7395 15.7394 27.7109 17.5926 28.8127 20.1999C27.383 18.5638 25.1586 19.4422 25.9621 22.0859C26.9932 20.4897 28.3578 21.4937 28.1436 23.0095C27.9627 24.3308 26.2183 25.3978 24.0464 25.2087C20.9338 24.9265 20.7484 22.7785 20.6709 21.0011C21.4362 20.8593 22.814 21.5684 23.9887 23.2183L24.4217 18.2575C23.1434 19.5894 21.9821 19.8421 20.6921 19.8829C21.1215 18.5433 23.0951 16.3481 23.0951 16.3481L20.2276 16.3478H20.2261H20.2248L16.9033 16.3481C16.9033 16.3481 18.877 18.5433 19.3061 19.8829C18.0163 19.8421 16.8551 19.5894 15.5765 18.2575L16.0097 23.2183C17.1847 21.5684 18.5623 20.8593 19.3276 21.0011C19.2503 22.7785 19.0648 24.9265 15.9521 25.2087C13.7802 25.3978 12.036 24.3308 11.8548 23.0095C11.6406 21.4937 13.0053 20.4897 14.0365 22.0859C14.8401 19.4422 12.6152 18.5638 11.186 20.1999C12.2877 17.5926 12.2587 15.7394 9.81076 13.8682C8.0535 16.2036 8.3025 18.1333 10.4793 20.3045C9.06211 19.5212 6.86005 20.3461 8.15814 22.994C8.83681 21.3468 10.2902 21.7159 10.5941 23.1324C10.7989 24.1313 10.1911 25.3094 8.87035 25.552C7.78836 25.7519 6.11859 25.0107 4.78117 22.1306C5.53523 22.1489 6.19361 22.529 7.04866 23.1175L5.64454 18.4405C5.29039 19.7539 4.8379 20.6133 4.35969 21.0806C4.03656 20.1346 4.08283 19.4496 4.37091 17.978L1.47266 19.0092C3.01218 21.11 4.50241 24.0607 5.72725 29.21C10.041 28.5931 14.8817 28.2469 19.9961 28.2469Z"/>
        </svg>
        Digital Prison Services
      </a>

      
    </div>

    <nav aria-label="Account navigation">
      <ul class="fallback-dps-header__navigation">
        
          <li class="fallback-dps-header__navigation__item">
            <span data-qa=header-user-name>F. Last</span>
          </li>
        

        <li class="fallback-dps-header__navigation__item">
          <a data-qa="signOut" class="fallback-dps-header__link fallback-dps-header__link--no-underline fallback-dps-header__sign-out" href="/sign-out">Sign out</a>
        </li>
      </ul>
    </nav>
  </div>
</header>

  

  <div class="govuk-width-container">
    
<div class="govuk-phase-banner">
  <p class="govuk-phase-banner__content">
    <strong class="govuk-tag govuk-phase-banner__content__tag">
      BETA
    </strong>
    <span class="govuk-phase-banner__text">
      This is a new service – your <a class="govuk-link" target="_blank" rel="noopener noreferrer"
                                                            href="https://eu.surveymonkey.com/r/prepare-someone-for-release-beta">feedback</a> will help us to improve it.
                                                            <a class="govuk-link" target="_blank" rel="noopener noreferrer"
                                                            href="/service-updates">View updates and changes.</a>
    </span>
  </p>
</div>

    
      
    
    
      
      
    

    
  
  

  
<nav class="govuk-breadcrumbs govuk-!-display-none-print govuk-breadcrumbs--collapse-on-mobile" aria-label="Breadcrumb">
  <ol class="govuk-breadcrumbs__list">

  
    <li class="govuk-breadcrumbs__list-item">
      <a class="govuk-breadcrumbs__link" href="#">Digital Prison Services</a>
    </li>
  

  
    <li class="govuk-breadcrumbs__list-item">
      <a class="govuk-breadcrumbs__link" href="/">Prepare someone for release</a>
    </li>
  

  </ol>
</nav>



    <br />
    
      <span class="govuk-caption-xl">Prepare someone for release</span>
      <h1 class="govuk-heading-xl" data-qa="page-heading">Resettlement record</h1>
    

    
  <div class="govuk-grid-row profile-header">
    <div class="govuk-grid-column-full">
      <div class="govuk-grid-row">
        <div class="govuk-grid-column-one-half">
          <div class="govuk-grid-row">
            <div class="govuk-grid-column-one-quarter">
              <a href="/prisoner-overview/?prisonerNumber=A1234DY">
                <img src="data:image/jpeg;base64, " alt="view prisoner profile"
                     class="govuk-!-width-full profile-header__person-photo">
              </a>
            </div>
            <div class="govuk-grid-column-three-quarters">
              <h1 class="govuk-heading-xl" data-qa="profile-heading-full-name">
                Smith, John
                <span class="govuk-caption-l">A1234DY</span>
                <p class="govuk-body-s govuk-!-padding-top-2">
                  <a href="#/prisoner/A1234DY">View full DPS
                    profile</a>
                </p>
              </h1>
            </div>
          </div>
        </div>
        <div class="govuk-grid-column-one-half">
          <div class="govuk-grid-row">
            <div class="govuk-grid-column-one-half">
              <p>
                <b>Prisoner number:</b><br>
                A1234DY</p>
              <p>
                <b>Location:</b>
                
              </p>
              <p>
                <b>Date of birth:</b>
                
                ()</p>
            </div>
            <div class="govuk-grid-column-one-half">
              <p>
                <b>Release date:</b>
                -
                <br />
                
                
                
                
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>

    


  <div class="govuk-grid-row ">
    <div class="govuk-grid-column-full">
      <nav class="moj-sub-navigation" aria-label="Sub navigation">
        <ul class="moj-sub-navigation__list">
          
            <li class="moj-sub-navigation__item">
              <a class="moj-sub-navigation__link"
                 data-qa="sub-nav-prisoner-overview"
                 href="/prisoner-overview/?prisonerNumber=A1234DY" >
                Resettlement overview
              </a>
            </li>
          
            <li class="moj-sub-navigation__item">
              <a class="moj-sub-navigation__link"
                 data-qa="sub-nav-accommodation"
                 href="/accommodation/?prisonerNumber=A1234DY" >
                Accommodation
              </a>
            </li>
          
            <li class="moj-sub-navigation__item">
              <a class="moj-sub-navigation__link"
                 data-qa="sub-nav-attitudes-thinking-and-behaviour"
                 href="/attitudes-thinking-and-behaviour/?prisonerNumber=A1234DY" >
                Attitudes, thinking and behaviour
              </a>
            </li>
          
            <li class="moj-sub-navigation__item">
              <a class="moj-sub-navigation__link"
                 data-qa="sub-nav-children-families-and-communities"
                 href="/children-families-and-communities/?prisonerNumber=A1234DY" >
                Children, families and communities
              </a>
            </li>
          
            <li class="moj-sub-navigation__item">
              <a class="moj-sub-navigation__link"
                 data-qa="sub-nav-drugs-and-alcohol"
                 href="/drugs-and-alcohol/?prisonerNumber=A1234DY" >
                Drugs and alcohol
              </a>
            </li>
          
            <li class="moj-sub-navigation__item">
              <a class="moj-sub-navigation__link"
                 data-qa="sub-nav-education-skills-and-work"
                 href="/education-skills-and-work/?prisonerNumber=A1234DY" >
                Education, skills and work
              </a>
            </li>
          
            <li class="moj-sub-navigation__item">
              <a class="moj-sub-navigation__link"
                 data-qa="sub-nav-finance-and-id"
                 href="/finance-and-id/?prisonerNumber=A1234DY" aria-current=page>
                Finance and ID
              </a>
            </li>
          
            <li class="moj-sub-navigation__item">
              <a class="moj-sub-navigation__link"
                 data-qa="sub-nav-health-status"
                 href="/health-status/?prisonerNumber=A1234DY" >
                Health
              </a>
            </li>
          
        </ul>
      </nav>
    </div>
  </div>


  </div>


    
      <div class="govuk-width-container">
        
        <main class="govuk-main-wrapper app-container govuk-body" id="main-content">
          
  <div class="govuk-grid-row govuk-!-padding-top-4 govuk-!-padding-bottom-4">
    
  <div class="govuk-grid-column-two-thirds">
    <h2 class="govuk-heading-l" data-qa="page-title-h2">
      Finance and ID
    </h2>
    
  </div>

    <div class="govuk-grid-column-one-third">
      
  <section id="pathway-status" class="app-summary-card govuk-!-margin-bottom-8">
    <header class="app-summary-card__header">
      <h3 class="app-summary-card__title">
        Resettlement status: 
        <strong class="govuk-tag govuk-tag--blue"> In progress </strong>
      </h3>
    </header>
    <div class="app-summary-card__header">
      <div class="govuk-form-group govuk-!-margin-0">
        <input type="hidden" id="updated" name="updated" value="today" />
        <input type="hidden" id="pathway" name="pathway" value="attitudes" />
        <a
          class="govuk-button"
          href="/status-update?selectedPathway=finance-and-id&prisonerNumber=A1234DY"
          data-qa="update-pathway-status-button"
        >
          Update status
        </a>
      </div>
    </div>
  </section>

    </div>
  </div>
  <div class="govuk-grid-row govuk-!-padding-top-4">
    <div class="govuk-grid-column-one-quarter sticky-anchor-links">
      

      
        
      
      
  <ul class="app-subnav__section">
    <li class="app-subnav__section-item app-subnav__section-item--current">
      <ul class="app-subnav__section app-subnav__section--nested">
        
          <li class="app-subnav__section-item">
            <a href="#case-notes">Case notes and status history</a>
          </li>
        
          <li class="app-subnav__section-item">
            <a href="#finance">Finance</a>
          </li>
        
          <li class="app-subnav__section-item">
            <a href="#id">ID</a>
          </li>
        
          <li class="app-subnav__section-item">
            <a href="#assessment-information">Report information</a>
          </li>
        
          <li class="app-subnav__section-item">
            <a href="#referral">Referral</a>
          </li>
        
      </ul>
    </li>
  </ul>

    </div>
    <div class="govuk-grid-column-three-quarters">
      

<section id="case-notes" class="app-summary-card govuk-!-margin-bottom-8">
  
  <header class="app-summary-card__header">
    <h3 class="app-summary-card__title">Finance and ID case notes and status history</h3>
  </header>
  <div class="app-summary-card__body govuk-!-padding-top-4">
    <div class="govuk-grid-row">
      
      <form action="/finance-and-id?prisonerNumber=A1234DY#case-notes" method="GET" novalidate>
        <div class="govuk-grid-column-full">
          <label class="govuk-label" for="pathway-select">Created by</label>
          <select name="createdByUserId" class="govuk-select" id="pathway-select">
            <option value="0">Select an option</option>
            
          </select>
          
          <input type="hidden" name="prisonerNumber" value="A1234DY">
        </div>
        <div class="govuk-grid-column-full">
          <button class="govuk-button govuk-!-margin-bottom-0 govuk-!-margin-top-4" type="submit">Apply filters</button>
        </div>
      </form>
    </div>
    
      <p></p>
    
  </div>
</section>
      <section id="finance" class="app-summary-card govuk-!-margin-bottom-8">
        <header class="app-summary-card__header">
          <h3 class="app-summary-card__title">
            Finance
          </h3>
          
            <span class="right">
                <a href="/finance-and-id/add-a-bank-account/?prisonerNumber=A1234DY"
                   class="govuk-button">Add a bank account application</a>
              </span>
          
        </header>
        <div class="app-summary-card__body">
          <div class="govuk-grid-row">
            <div class="govuk-grid-column-full">
              
                <p>No current applications</p>
              
            </div>
          </div>
        </div>
      </section>
      <section id="id" class="app-summary-card govuk-!-margin-bottom-8">
        <header class="app-summary-card__header">
          <h3 class="app-summary-card__title">
            ID
          </h3>
          
          
          <span class="right">
              <a class="govuk-button"
                 href="/finance-and-id/add-an-id/?prisonerNumber=A1234DY&existingIdTypes=">
                Add an ID application
              </a>
            </span>
        </header>
        <div class="app-summary-card__body">
          <div class="govuk-grid-row">
            <div class="govuk-grid-column-full">
              
                <p>No current applications</p>
                
            </div>
          </div>
        </div>
      </section>
      
  <section id="assessment-information" class="app-summary-card govuk-!-margin-bottom-8">
    <header class="app-summary-card__header">
      <h3 class="app-summary-card__title">Report information</h3>
      <span class="right"></span>
    </header>
    <div class="app-summary-card__body">
    
      <div class="govuk-error-summary" data-module="govuk-error-summary">
        <div role="alert">
          <h2 class="govuk-error-summary__title">There is a problem</h2>
          <div class="govuk-error-summary__body">No data found</div>
        </div>
      </div>
    
  </div>
  </section>

      
  <section id="referral" class="app-summary-card govuk-!-margin-bottom-8">
    <header class="app-summary-card__header">
      <h3 class="app-summary-card__title">
        Referral
      </h3>
      <span class="right"></span>
    </header>
    <div class="app-summary-card__body">
      <p>No data found</p>
    </div>
  </section>

    </div>
  </div>

        </main>
      </div>
    

    
  
    
    <footer class="govuk-footer govuk-!-display-none-print"></footer>

  


    
  
  
  <script type="module" src="/assets/govukFrontendInit.js"></script>
  <script src="/assets/moj/all.js"></script>
  <script src="/assets/mojFrontendInit.js"></script>

  <script src="/assets/js/finance-id.js"></script>

  </body>
</html>
"
`;

exports[`getView Happy path with specified query params and data from endpoints 1`] = `
"<!DOCTYPE html>
<html lang="en" class="govuk-template">
  <head>
    <meta charset="utf-8">
    <title>Prepare someone for release - Finance and ID
</title>
    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
    <meta name="theme-color" content="#0b0c0c">

    
      <link rel="icon" sizes="48x48" href="/assets/images/favicon.ico">
      <link rel="icon" sizes="any" href="/assets/images/favicon.svg" type="image/svg+xml">
      <link rel="mask-icon" href="/assets/images/govuk-icon-mask.svg" color="#0b0c0c">
      <link rel="apple-touch-icon" href="/assets/images/govuk-icon-180.png">
      <link rel="manifest" href="/assets/manifest.json">
    

    
  <link href="/assets/stylesheets/application.css?" rel="stylesheet" />
  <script src="/assets/js/jquery.min.js"></script>
  
  <!--<![endif]-->
  
  
  <script src="/assets/analytics.js" nonce=""></script>
  <meta name="csrf-token" content="">

    
  </head>
  <body class="govuk-template__body">
    <script>document.body.className += ' js-enabled' + ('noModule' in HTMLScriptElement.prototype ? ' govuk-frontend-supported' : '');</script>
    

    
      <a href="#main-content" class="govuk-skip-link" data-module="govuk-skip-link">Skip to main content</a>

    

    
  
    
    
<header class="fallback-dps-header" role="banner">
  <div class="fallback-dps-header__container">
    <div class="fallback-dps-header__title">
      <a class="fallback-dps-header__link fallback-dps-header__link--no-underline fallback-dps-header__title__service-name" href="#">
        <svg role="presentation" focusable="false" class="fallback-dps-header__logo" xmlns="http://www.w3.org/2000/svg" width="41" height="30" viewBox="0 0 41 30">
          <path fill-rule="evenodd" clip-rule="evenodd" d="M7.54677 9.20065C8.64351 9.65301 9.88802 9.13584 10.3347 8.05183C10.7839 6.97073 10.27 5.71374 9.17342 5.26352C8.09836 4.82212 6.84843 5.34938 6.40124 6.4349C5.95404 7.515 6.47121 8.76014 7.54677 9.20065Z"/>
          <path fill-rule="evenodd" clip-rule="evenodd" d="M2.71865 12.0298C3.81564 12.4821 5.0599 11.965 5.50659 10.881C5.9558 9.79984 5.44191 8.54286 4.34529 8.09264C3.27023 7.65124 2.02031 8.17837 1.57311 9.26402C1.12592 10.3441 1.64308 11.5891 2.71865 12.0298Z"/>
          <path fill-rule="evenodd" clip-rule="evenodd" d="M1.3065 17.397C2.4035 17.8494 3.648 17.3322 4.09469 16.2481C4.54391 15.1669 4.02977 13.91 2.9334 13.4599C1.85834 13.0183 0.608415 13.5457 0.160968 14.6311C-0.286227 15.7112 0.231192 16.9565 1.3065 17.397Z"/>
          <path fill-rule="evenodd" clip-rule="evenodd" d="M12.9335 10.9018C14.0302 11.3542 15.2747 10.837 15.7214 9.75301C16.1706 8.6719 15.6568 7.41491 14.5601 6.96469C13.4851 6.52329 12.2351 7.05055 11.788 8.13607C11.3408 9.21617 11.8579 10.4613 12.9335 10.9018Z"/>
          <path fill-rule="evenodd" clip-rule="evenodd" d="M32.4543 9.20065C31.3573 9.65301 30.1131 9.13584 29.6661 8.05183C29.2172 6.97073 29.7308 5.71374 30.8274 5.26352C31.9027 4.82212 33.1527 5.34938 33.5999 6.4349C34.0471 7.515 33.5299 8.76014 32.4543 9.20065Z"/>
          <path fill-rule="evenodd" clip-rule="evenodd" d="M37.2805 12.0298C36.1833 12.4821 34.939 11.965 34.4923 10.881C34.0433 9.79984 34.557 8.54286 35.6536 8.09264C36.7289 7.65124 37.9788 8.17837 38.426 9.26402C38.8732 10.3441 38.3558 11.5891 37.2805 12.0298Z"/>
          <path fill-rule="evenodd" clip-rule="evenodd" d="M38.6944 17.397C37.5977 17.8494 36.3532 17.3322 35.9065 16.2481C35.4573 15.1669 35.9712 13.91 37.0678 13.4599C38.1428 13.0183 39.3928 13.5457 39.84 14.6311C40.2874 15.7112 39.77 16.9565 38.6944 17.397Z"/>
          <path fill-rule="evenodd" clip-rule="evenodd" d="M27.0657 10.9018C25.9687 11.3542 24.7244 10.837 24.2775 9.75301C23.8285 8.6719 24.3421 7.41491 25.4388 6.96469C26.5141 6.52329 27.764 7.05055 28.2112 8.13607C28.6584 9.21617 28.1412 10.4613 27.0657 10.9018Z"/>
          <path fill-rule="evenodd" clip-rule="evenodd" d="M21.1246 5.39912L21.1311 5.39294L23.8259 6.80828V2.83635L21.1342 3.68851L21.1266 3.68044C21.0512 3.58147 20.9639 3.49284 20.8653 3.41656L20.858 3.40899L21.9407 0L19.9961 0.000252154L18.0507 0L19.1337 3.40899L19.1263 3.41656C19.0281 3.49284 18.9402 3.58147 18.8653 3.68044L18.8573 3.68851L16.166 2.83635V6.80828L18.8609 5.39294L18.8673 5.39912C18.9471 5.50351 19.0407 5.5963 19.1458 5.67498L17.5981 10.344C17.5962 10.3498 17.5942 10.3556 17.5925 10.3611L17.5908 10.366L17.5913 10.3666C17.5193 10.5997 17.4807 10.847 17.4807 11.1036C17.4807 12.3669 18.4127 13.4095 19.6264 13.5887C19.6445 13.5915 19.6621 13.5946 19.6804 13.5968C19.7838 13.61 19.8884 13.6188 19.9956 13.6188H19.9961H19.9964C20.1031 13.6188 20.2079 13.61 20.3116 13.5968C20.3295 13.5946 20.3472 13.5915 20.3655 13.5887C21.5788 13.4095 22.5112 12.3669 22.5112 11.1036C22.5112 10.847 22.4721 10.5997 22.4006 10.3666L22.4009 10.366L22.3994 10.3611C22.3975 10.3556 22.3955 10.3498 22.3935 10.344L20.8461 5.67498C20.951 5.5963 21.0448 5.50351 21.1246 5.39912Z"/>
          <path fill-rule="evenodd" clip-rule="evenodd" d="M19.9961 28.2469C25.1126 28.2469 29.9557 28.5936 34.2707 29.2111C35.4958 24.0612 36.9865 21.1103 38.5258 19.0092L35.6272 17.978C35.9156 19.4496 35.9616 20.1346 35.6388 21.0806C35.1608 20.6133 34.7078 19.7539 34.3542 18.4405L32.95 23.1175C33.8045 22.529 34.4635 22.1489 35.2174 22.1306C33.8799 25.0107 32.2103 25.7519 31.1284 25.552C29.8069 25.3094 29.1998 24.1313 29.4046 23.1324C29.7085 21.7159 31.1616 21.3468 31.8404 22.994C33.1384 20.3461 30.9362 19.5212 29.5189 20.3045C31.6957 18.1333 31.9448 16.2036 30.1877 13.8682C27.7395 15.7394 27.7109 17.5926 28.8127 20.1999C27.383 18.5638 25.1586 19.4422 25.9621 22.0859C26.9932 20.4897 28.3578 21.4937 28.1436 23.0095C27.9627 24.3308 26.2183 25.3978 24.0464 25.2087C20.9338 24.9265 20.7484 22.7785 20.6709 21.0011C21.4362 20.8593 22.814 21.5684 23.9887 23.2183L24.4217 18.2575C23.1434 19.5894 21.9821 19.8421 20.6921 19.8829C21.1215 18.5433 23.0951 16.3481 23.0951 16.3481L20.2276 16.3478H20.2261H20.2248L16.9033 16.3481C16.9033 16.3481 18.877 18.5433 19.3061 19.8829C18.0163 19.8421 16.8551 19.5894 15.5765 18.2575L16.0097 23.2183C17.1847 21.5684 18.5623 20.8593 19.3276 21.0011C19.2503 22.7785 19.0648 24.9265 15.9521 25.2087C13.7802 25.3978 12.036 24.3308 11.8548 23.0095C11.6406 21.4937 13.0053 20.4897 14.0365 22.0859C14.8401 19.4422 12.6152 18.5638 11.186 20.1999C12.2877 17.5926 12.2587 15.7394 9.81076 13.8682C8.0535 16.2036 8.3025 18.1333 10.4793 20.3045C9.06211 19.5212 6.86005 20.3461 8.15814 22.994C8.83681 21.3468 10.2902 21.7159 10.5941 23.1324C10.7989 24.1313 10.1911 25.3094 8.87035 25.552C7.78836 25.7519 6.11859 25.0107 4.78117 22.1306C5.53523 22.1489 6.19361 22.529 7.04866 23.1175L5.64454 18.4405C5.29039 19.7539 4.8379 20.6133 4.35969 21.0806C4.03656 20.1346 4.08283 19.4496 4.37091 17.978L1.47266 19.0092C3.01218 21.11 4.50241 24.0607 5.72725 29.21C10.041 28.5931 14.8817 28.2469 19.9961 28.2469Z"/>
        </svg>
        Digital Prison Services
      </a>

      
    </div>

    <nav aria-label="Account navigation">
      <ul class="fallback-dps-header__navigation">
        
          <li class="fallback-dps-header__navigation__item">
            <span data-qa=header-user-name>F. Last</span>
          </li>
        

        <li class="fallback-dps-header__navigation__item">
          <a data-qa="signOut" class="fallback-dps-header__link fallback-dps-header__link--no-underline fallback-dps-header__sign-out" href="/sign-out">Sign out</a>
        </li>
      </ul>
    </nav>
  </div>
</header>

  

  <div class="govuk-width-container">
    
<div class="govuk-phase-banner">
  <p class="govuk-phase-banner__content">
    <strong class="govuk-tag govuk-phase-banner__content__tag">
      BETA
    </strong>
    <span class="govuk-phase-banner__text">
      This is a new service – your <a class="govuk-link" target="_blank" rel="noopener noreferrer"
                                                            href="https://eu.surveymonkey.com/r/prepare-someone-for-release-beta">feedback</a> will help us to improve it.
                                                            <a class="govuk-link" target="_blank" rel="noopener noreferrer"
                                                            href="/service-updates">View updates and changes.</a>
    </span>
  </p>
</div>

    
      
    
    
      
      
    

    
  
  

  
<nav class="govuk-breadcrumbs govuk-!-display-none-print govuk-breadcrumbs--collapse-on-mobile" aria-label="Breadcrumb">
  <ol class="govuk-breadcrumbs__list">

  
    <li class="govuk-breadcrumbs__list-item">
      <a class="govuk-breadcrumbs__link" href="#">Digital Prison Services</a>
    </li>
  

  
    <li class="govuk-breadcrumbs__list-item">
      <a class="govuk-breadcrumbs__link" href="/">Prepare someone for release</a>
    </li>
  

  </ol>
</nav>



    <br />
    
      <span class="govuk-caption-xl">Prepare someone for release</span>
      <h1 class="govuk-heading-xl" data-qa="page-heading">Resettlement record</h1>
    

    
  <div class="govuk-grid-row profile-header">
    <div class="govuk-grid-column-full">
      <div class="govuk-grid-row">
        <div class="govuk-grid-column-one-half">
          <div class="govuk-grid-row">
            <div class="govuk-grid-column-one-quarter">
              <a href="/prisoner-overview/?prisonerNumber=A1234DY">
                <img src="data:image/jpeg;base64, " alt="view prisoner profile"
                     class="govuk-!-width-full profile-header__person-photo">
              </a>
            </div>
            <div class="govuk-grid-column-three-quarters">
              <h1 class="govuk-heading-xl" data-qa="profile-heading-full-name">
                Smith, John
                <span class="govuk-caption-l">A1234DY</span>
                <p class="govuk-body-s govuk-!-padding-top-2">
                  <a href="#/prisoner/A1234DY">View full DPS
                    profile</a>
                </p>
              </h1>
            </div>
          </div>
        </div>
        <div class="govuk-grid-column-one-half">
          <div class="govuk-grid-row">
            <div class="govuk-grid-column-one-half">
              <p>
                <b>Prisoner number:</b><br>
                A1234DY</p>
              <p>
                <b>Location:</b>
                
              </p>
              <p>
                <b>Date of birth:</b>
                
                ()</p>
            </div>
            <div class="govuk-grid-column-one-half">
              <p>
                <b>Release date:</b>
                -
                <br />
                
                
                
                
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>

    


  <div class="govuk-grid-row ">
    <div class="govuk-grid-column-full">
      <nav class="moj-sub-navigation" aria-label="Sub navigation">
        <ul class="moj-sub-navigation__list">
          
            <li class="moj-sub-navigation__item">
              <a class="moj-sub-navigation__link"
                 data-qa="sub-nav-prisoner-overview"
                 href="/prisoner-overview/?prisonerNumber=A1234DY" >
                Resettlement overview
              </a>
            </li>
          
            <li class="moj-sub-navigation__item">
              <a class="moj-sub-navigation__link"
                 data-qa="sub-nav-accommodation"
                 href="/accommodation/?prisonerNumber=A1234DY" >
                Accommodation
              </a>
            </li>
          
            <li class="moj-sub-navigation__item">
              <a class="moj-sub-navigation__link"
                 data-qa="sub-nav-attitudes-thinking-and-behaviour"
                 href="/attitudes-thinking-and-behaviour/?prisonerNumber=A1234DY" >
                Attitudes, thinking and behaviour
              </a>
            </li>
          
            <li class="moj-sub-navigation__item">
              <a class="moj-sub-navigation__link"
                 data-qa="sub-nav-children-families-and-communities"
                 href="/children-families-and-communities/?prisonerNumber=A1234DY" >
                Children, families and communities
              </a>
            </li>
          
            <li class="moj-sub-navigation__item">
              <a class="moj-sub-navigation__link"
                 data-qa="sub-nav-drugs-and-alcohol"
                 href="/drugs-and-alcohol/?prisonerNumber=A1234DY" >
                Drugs and alcohol
              </a>
            </li>
          
            <li class="moj-sub-navigation__item">
              <a class="moj-sub-navigation__link"
                 data-qa="sub-nav-education-skills-and-work"
                 href="/education-skills-and-work/?prisonerNumber=A1234DY" >
                Education, skills and work
              </a>
            </li>
          
            <li class="moj-sub-navigation__item">
              <a class="moj-sub-navigation__link"
                 data-qa="sub-nav-finance-and-id"
                 href="/finance-and-id/?prisonerNumber=A1234DY" aria-current=page>
                Finance and ID
              </a>
            </li>
          
            <li class="moj-sub-navigation__item">
              <a class="moj-sub-navigation__link"
                 data-qa="sub-nav-health-status"
                 href="/health-status/?prisonerNumber=A1234DY" >
                Health
              </a>
            </li>
          
        </ul>
      </nav>
    </div>
  </div>


  </div>


    
      <div class="govuk-width-container">
        
        <main class="govuk-main-wrapper app-container govuk-body" id="main-content">
          
  <div class="govuk-grid-row govuk-!-padding-top-4 govuk-!-padding-bottom-4">
    
  <div class="govuk-grid-column-two-thirds">
    <h2 class="govuk-heading-l" data-qa="page-title-h2">
      Finance and ID
    </h2>
    
  </div>

    <div class="govuk-grid-column-one-third">
      
  <section id="pathway-status" class="app-summary-card govuk-!-margin-bottom-8">
    <header class="app-summary-card__header">
      <h3 class="app-summary-card__title">
        Resettlement status: 
        <strong class="govuk-tag govuk-tag--blue"> In progress </strong>
      </h3>
    </header>
    <div class="app-summary-card__header">
      <div class="govuk-form-group govuk-!-margin-0">
        <input type="hidden" id="updated" name="updated" value="today" />
        <input type="hidden" id="pathway" name="pathway" value="attitudes" />
        <a
          class="govuk-button"
          href="/status-update?selectedPathway=finance-and-id&prisonerNumber=A1234DY"
          data-qa="update-pathway-status-button"
        >
          Update status
        </a>
      </div>
    </div>
  </section>

    </div>
  </div>
  <div class="govuk-grid-row govuk-!-padding-top-4">
    <div class="govuk-grid-column-one-quarter sticky-anchor-links">
      

      
        
      
      
  <ul class="app-subnav__section">
    <li class="app-subnav__section-item app-subnav__section-item--current">
      <ul class="app-subnav__section app-subnav__section--nested">
        
          <li class="app-subnav__section-item">
            <a href="#case-notes">Case notes and status history</a>
          </li>
        
          <li class="app-subnav__section-item">
            <a href="#finance">Finance</a>
          </li>
        
          <li class="app-subnav__section-item">
            <a href="#id">ID</a>
          </li>
        
          <li class="app-subnav__section-item">
            <a href="#assessment-information">Report information</a>
          </li>
        
          <li class="app-subnav__section-item">
            <a href="#referral-contract-type">Referral - Contract Type</a>
          </li>
        
      </ul>
    </li>
  </ul>

    </div>
    <div class="govuk-grid-column-three-quarters">
      

<section id="case-notes" class="app-summary-card govuk-!-margin-bottom-8">
  
  <header class="app-summary-card__header">
    <h3 class="app-summary-card__title">Finance and ID case notes and status history</h3>
  </header>
  <div class="app-summary-card__body govuk-!-padding-top-4">
    <div class="govuk-grid-row">
      
      <form action="/finance-and-id?prisonerNumber=A1234DY#case-notes" method="GET" novalidate>
        <div class="govuk-grid-column-full">
          <label class="govuk-label" for="pathway-select">Created by</label>
          <select name="createdByUserId" class="govuk-select" id="pathway-select">
            <option value="0">Select an option</option>
            
              
              <option  value="A_USER">A User</option>
            
          </select>
          
          <input type="hidden" name="prisonerNumber" value="A1234DY">
        </div>
        <div class="govuk-grid-column-full">
          <button class="govuk-button govuk-!-margin-bottom-0 govuk-!-margin-top-4" type="submit">Apply filters</button>
        </div>
      </form>
    </div>
    
      <div class="govuk-grid-row govuk-!-padding-top-8">
        <div class="govuk-grid-column-full" id="case-notes-container">
          <hr>
          
            
            <div class="case-note">
              <h3>Finance and ID</h3>
              <strong></strong>
              <p class="show-line-breaks">
                This is a case note
              </p>
              <span class="govuk-caption-m">Happened: 7 September 2024</span>
              <span class="govuk-caption-m">Created: 7 September 2024 by A User</span>
              <br>
            </div>
            <hr>
            
            
            <div class="case-note">
              <h3>Finance and ID</h3>
              <strong></strong>
              <p class="show-line-breaks">
                This is another case note
              </p>
              <span class="govuk-caption-m">Happened: 7 September 2024</span>
              <span class="govuk-caption-m">Created: 7 September 2024 by A User</span>
              <br>
            </div>
            <hr>
            
          
          
          
          
          
          
            
  
  

  <nav class="moj-pagination" aria-label="Pagination navigation">
    <ul class="moj-pagination__list">
      
        <li class="moj-pagination__item  moj-pagination__item--prev">
          <a class="moj-pagination__link" href="/finance-and-id?createdByUserId=2&amp;prisonerNumber=A1234DY&page=0&size=20&sort=occurenceDateTime,ASC&days=30&selectedPathway=FINANCE_AND_ID#case-notes">Previous<span class="govuk-visually-hidden"> page</span></a>
        </li>
      
      
          <li class="moj-pagination__item">
            <a class="moj-pagination__link" href="/finance-and-id?createdByUserId=2&amp;prisonerNumber=A1234DY&page=0&size=20&sort=occurenceDateTime,ASC&days=30&selectedPathway=FINANCE_AND_ID#case-notes " aria-label="Page 1 of 1">1</a>
          </li>
        
      
    </ul>
    
    
      
    
    <p class="moj-pagination__results">Showing <b>31</b> to <b>2</b> of <b>2</b> results</p>
  </nav>

          
        </div>
      </div>
      
  </div>
</section>
      <section id="finance" class="app-summary-card govuk-!-margin-bottom-8">
        <header class="app-summary-card__header">
          <h3 class="app-summary-card__title">
            Finance
          </h3>
          
        </header>
        <div class="app-summary-card__body">
          <div class="govuk-grid-row">
            <div class="govuk-grid-column-full">
              
                <h3 class="govuk-heading-s">Bank account</h3>
                <table class="govuk-table">
                  <tbody class="govuk-table__body">
                  <tr class="govuk-table__row">
                    <th scope="row" class="govuk-table__header">Bank</th>
                    <td class="govuk-table__cell">Natwest</td>
                  </tr>
                  <tr class="govuk-table__row">
                    <th scope="row" class="govuk-table__header">Application submitted</th>
                    <td class="govuk-table__cell">8 September 2024</td>
                  </tr>
                  <tr class="govuk-table__row">
                    <th scope="row" class="govuk-table__header">Status</th>
                    <td class="govuk-table__cell">Accepted</td>
                  </tr>
                  
                    <tr class="govuk-table__row">
                      <th scope="row" class="govuk-table__header">Date Accepted</th>
                      <td class="govuk-table__cell">10 September 2024</td>
                    </tr>
                  
                  
                  </tbody>
                </table>
                <br>
                
                
                <button class="ghost-button delete-finance-button">Delete application</button>
                <div class="confirm-delete-finance-form" hidden>
                  <div class="govuk-button-group">
                    <form action="/finance-and-id/bank-account-delete" method="post" novalidate>
                      <button class="govuk-button govuk-button--warning" type="submit" data-prevent-double-click="true">Confirm delete application
                      </button>
                      <input type="hidden" name="prisonerNumber" value="A1234DY">
                      <input type="hidden" name="financeId" value="12">
                      <input type="hidden" name="_csrf" value=""/>
                    </form>
                    <button class="ghost-button cancel-delete-finance-button" hidden>Cancel delete application</button>
                  </div>
                </div>
                
                
                  
                
                  
                
                
              
            </div>
          </div>
        </div>
      </section>
      <section id="id" class="app-summary-card govuk-!-margin-bottom-8">
        <header class="app-summary-card__header">
          <h3 class="app-summary-card__title">
            ID
          </h3>
          
          
            
          
            
          
          <span class="right">
              <a class="govuk-button"
                 href="/finance-and-id/add-an-id/?prisonerNumber=A1234DY&existingIdTypes=Birth certificate,Driving licence">
                Add an ID application
              </a>
            </span>
        </header>
        <div class="app-summary-card__body">
          <div class="govuk-grid-row">
            <div class="govuk-grid-column-full">
              
                
                  <div class="govuk-!-margin-bottom-8">
                    <h3 class="govuk-heading-s">ID 1</h3>
                    <table class="govuk-table">
                      <tbody class="govuk-table__body">
                      <tr class="govuk-table__row">
                        <th scope="row" class="govuk-table__header">Type</th>
                        <td class="govuk-table__cell">Birth certificate</td>
                      </tr>
                      <tr class="govuk-table__row">
                        <th scope="row" class="govuk-table__header">Application submitted</th>
                        <td class="govuk-table__cell">12 September 2024</td>
                      </tr>
                      
                        <tr class="govuk-table__row">
                          <th scope="row" class="govuk-table__header">Has the GRO number?</th>
                          <td class="govuk-table__cell">
                            No
                          </td>
                        </tr>
                        
                          <tr class="govuk-table__row">
                            <th scope="row" class="govuk-table__header">Was a UK national born overseas?</th>
                            <td class="govuk-table__cell">
                              No
                            </td>
                          </tr>
                        
                        <tr class="govuk-table__row">
                          <th scope="row" class="govuk-table__header">Priority application</th>
                          <td class="govuk-table__cell">
                            Yes
                          </td>
                        </tr>
                        
                      
                        <tr class="govuk-table__row">
                          <th scope="row" class="govuk-table__header">Cost of application</th>
                          <td class="govuk-table__cell">£12</td>
                        </tr>
                      
                      <tr class="govuk-table__row">
                        <th scope="row" class="govuk-table__header">Application status</th>
                        <td class="govuk-table__cell">Complete</td>
                      </tr>
                      
                      
                      </tbody>
                    </table>
                    <br>
                    
                    <button class="ghost-button delete-id-button">Delete application</button>
                    <div class="confirm-delete-id-form" hidden>
                      <div class="govuk-button-group">
                        <form action="/finance-and-id/id-delete" method="POST" novalidate>
                          <button class="govuk-button govuk-button--warning" type="submit" data-prevent-double-click="true">Confirm delete application
                          </button>
                          <input type="hidden" name="prisonerNumber" value="A1234DY">
                          <input type="hidden" name="idId" value="13">
                          <input type="hidden" name="_csrf" value=""/>
                        </form>
                        <button class="ghost-button cancel-delete-id-button" hidden>Cancel delete application</button>
                      </div>
                    </div>
                  </div>
                
                  <div class="">
                    <h3 class="govuk-heading-s">ID 2</h3>
                    <table class="govuk-table">
                      <tbody class="govuk-table__body">
                      <tr class="govuk-table__row">
                        <th scope="row" class="govuk-table__header">Type</th>
                        <td class="govuk-table__cell">Driving licence</td>
                      </tr>
                      <tr class="govuk-table__row">
                        <th scope="row" class="govuk-table__header">Application submitted</th>
                        <td class="govuk-table__cell">12 September 2024</td>
                      </tr>
                      
                        <tr class="govuk-table__row">
                          <th scope="row" class="govuk-table__header">Driving licence type</th>
                          <td class="govuk-table__cell">Full</td>
                        </tr>
                        <tr class="govuk-table__row">
                          <th scope="row" class="govuk-table__header">Driving licence application location</th>
                          <td class="govuk-table__cell">2024-09-12T14:45:02</td>
                        </tr>
                      
                      
                        <tr class="govuk-table__row">
                          <th scope="row" class="govuk-table__header">Cost of application</th>
                          <td class="govuk-table__cell">£45</td>
                        </tr>
                      
                      <tr class="govuk-table__row">
                        <th scope="row" class="govuk-table__header">Application status</th>
                        <td class="govuk-table__cell">Rejected</td>
                      </tr>
                      
                      
                      </tbody>
                    </table>
                    <br>
                    
                    <button class="ghost-button delete-id-button">Delete application</button>
                    <div class="confirm-delete-id-form" hidden>
                      <div class="govuk-button-group">
                        <form action="/finance-and-id/id-delete" method="POST" novalidate>
                          <button class="govuk-button govuk-button--warning" type="submit" data-prevent-double-click="true">Confirm delete application
                          </button>
                          <input type="hidden" name="prisonerNumber" value="A1234DY">
                          <input type="hidden" name="idId" value="17">
                          <input type="hidden" name="_csrf" value=""/>
                        </form>
                        <button class="ghost-button cancel-delete-id-button" hidden>Cancel delete application</button>
                      </div>
                    </div>
                  </div>
                
              
            </div>
          </div>
        </div>
      </section>
      
  <section id="assessment-information" class="app-summary-card govuk-!-margin-bottom-8">
    <header class="app-summary-card__header">
      <h3 class="app-summary-card__title">Report information</h3>
      <span class="right"></span>
    </header>
    <div class="app-summary-card__body">
    
      
        <table class="govuk-table">
          <tbody class="govuk-table__body">
            
              <tr class="govuk-table__row">
                <th class="govuk-table__header" scope="row">This is a question</th>
                <td class="govuk-table__cell show-line-breaks">Another answer</td>
                <td class="govuk-table__cell">
                  <a href="/ImmediateNeedsReport/pathway/FINANCE_AND_ID/page/PAGE_1/start-edit/?prisonerNumber=A1234DY&submitted=true&type=BCST2">Change</a>
                </td>
              </tr>
            
              <tr class="govuk-table__row">
                <th class="govuk-table__header" scope="row">This is another question</th>
                <td class="govuk-table__cell show-line-breaks">Answer1
Answer2
Answer3</td>
                <td class="govuk-table__cell">
                  <a href="/ImmediateNeedsReport/pathway/FINANCE_AND_ID/page/PAGE_2/start-edit/?prisonerNumber=A1234DY&submitted=true&type=BCST2">Change</a>
                </td>
              </tr>
            
          </tbody>
        </table>
        <p class="app-summary-card__hint">Last updated: 2 September 2024 by A User</p>
        
          <details class="govuk-details">
            <summary class="govuk-details__summary">
              <span class="govuk-details__summary-text">
                View original version
              </span>
            </summary>
            <div class="govuk-details__text">
              <h3 class="govuk-!-margin-bottom-3">Original report information</h3>
              <table class="govuk-table">
                <tbody class="govuk-table__body">
                
                  <tr class="govuk-table__row">
                    <th class="govuk-table__header" scope="row">This is a question</th>
                    <td class="govuk-table__cell show-line-breaks">An answer</td>
                  </tr>
                
                  <tr class="govuk-table__row">
                    <th class="govuk-table__header" scope="row">This is another question</th>
                    <td class="govuk-table__cell show-line-breaks">Answer1
Answer2
Answer3</td>
                  </tr>
                
                </tbody>
              </table>
              <p class="app-summary-card__hint">Submitted: 7 September 2024 by A User</p>
            </div>
          </details>
        
      
    
  </div>
  </section>

      
  
    <section id="referral-contract-type" class="app-summary-card govuk-!-margin-bottom-8">
    <header class="app-summary-card__header">
      <h3 class="app-summary-card__title">
          Referral - Contract Type
        
          <strong class="govuk-tag govuk-tag--green govuk-!-margin-left-2">
            Referral sent
          </strong>
        
      </h3>
      <span class="right"></span>
    </header>
    <div class="app-summary-card__body">
      <table class="govuk-table">


  <tbody class="govuk-table__body">

  
    <tr class="govuk-table__row">
    
      
      
      <th scope="row" class="govuk-table__header">Contract Type</th>
      
    
      
      
      <td class="govuk-table__cell">Contract Type</td>
      
    
    </tr>
  

  
    <tr class="govuk-table__row">
    
      
      
      <th scope="row" class="govuk-table__header">Intervention Title</th>
      
    
      
      
      <td class="govuk-table__cell">Intervention Title</td>
      
    
    </tr>
  

  
    <tr class="govuk-table__row">
    
      
      
      <th scope="row" class="govuk-table__header">Service Categories</th>
      
    
      
      
      <td class="govuk-table__cell">Cat 1, Cat 2, Cat 3</td>
      
    
    </tr>
  

  
    <tr class="govuk-table__row">
    
      
      
      <th scope="row" class="govuk-table__header">Service Provider</th>
      
    
      
      
      <td class="govuk-table__cell">The service provider</td>
      
    
    </tr>
  

  
    <tr class="govuk-table__row">
    
      
      
      <th scope="row" class="govuk-table__header">Service Provider Location</th>
      
    
      
      
      <td class="govuk-table__cell">Leeds</td>
      
    
    </tr>
  

  
    <tr class="govuk-table__row">
    
      
      
      <th scope="row" class="govuk-table__header">Service Provider User</th>
      
    
      
      
      <td class="govuk-table__cell">A User</td>
      
    
    </tr>
  

  
    <tr class="govuk-table__row">
    
      
      
      <th scope="row" class="govuk-table__header">Referring Officer</th>
      
    
      
      
      <td class="govuk-table__cell">A Officer</td>
      
    
    </tr>
  

  
    <tr class="govuk-table__row">
    
      
      
      <th scope="row" class="govuk-table__header">Responsible Officer</th>
      
    
      
      
      <td class="govuk-table__cell">Another Officer</td>
      
    
    </tr>
  

  
    <tr class="govuk-table__row">
    
      
      
      <th scope="row" class="govuk-table__header">Referral Created</th>
      
    
      
      
      <td class="govuk-table__cell">10 Sept 2024</td>
      
    
    </tr>
  

  
    <tr class="govuk-table__row">
    
      
      
      <th scope="row" class="govuk-table__header">Referral Sent</th>
      
    
      
      
      <td class="govuk-table__cell">31 Aug 2024</td>
      
    
    </tr>
  

  </tbody>
</table>

      </div>
    </section>
  

    </div>
  </div>

        </main>
      </div>
    

    
  
    
    <footer class="govuk-footer govuk-!-display-none-print"></footer>

  


    
  
  
  <script type="module" src="/assets/govukFrontendInit.js"></script>
  <script src="/assets/moj/all.js"></script>
  <script src="/assets/mojFrontendInit.js"></script>

  <script src="/assets/js/finance-id.js"></script>

  </body>
</html>
"
`;
